test/classes/bradc/arrayInClass/overrideDefaultArr.good
c is: {x = 1.0 2.0 3.0}
overrideDefaultArr.chpl:11: error: initializing array member 'x' using array of different size/shape
