test/classes/bradc/arrayInClass/overrideDefaultArr.future
error message: over-riding default array member value

Steve argues that the current behavior is correct -- that the inferred
type of the member will be the static + dynamic type information for
the array, so not only its rank and element type, but also its size.
While it might be nice to relax this eventually (permitting the static
type to be inferred, but not the dynamic information), I'm OK with this
for the time being, in which case this test should really get an error
message improvement to make it clearer what the problem is.  I put a
placeholder into the .good but am open to other messages as well -- naming
the field in question would definitely be very helpful.

-----

It seems that over-riding a class member's initial value causes problems
if the member is an inferred-size array.  This code results in:

overrideDefaultArr.chpl:11: error: zippered iterations have non-equal lengths

whereas I think it should work.
